# realsense-tools

./: .gitignore  CMakeLists.txt  main.cpp  main.py  readme.md
tools/: CMakeLists.txt  depth.cpp  simple.cpp
